--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,3 @@
 @import 'base/base_index.scss';
 @import 'fonts/fonts_index.scss';
-@import 'logos/logo_index.scss';
+@import 'logos/logos_index.scss';
