Finish styling LogoName

--- a/app/assets/stylesheets/fonts/fonts.scss
+++ b/app/assets/stylesheets/fonts/fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
