--- a/app/assets/stylesheets/logos/logos.scss
+++ b/app/assets/stylesheets/logos/logos.scss
@@ -1,7 +1,13 @@
 .logo_name {
-  font-family: 'Source Sans Pro', sans-serif;
-  width: 10rem;
+  display: inline-block;
+  text-decoration: none;
+  color: #2D333A;
+  font-family: 'Lato', sans-serif;
+  width: 13rem;
   height: 3rem;
+  font-size: 2.4rem;
+  font-weight: 900;
+  margin: 1rem;
 }
 
 .logo_name__img {
