Create skeletom UserForm

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,4 @@
 @import 'base/base_index.scss';
 @import 'fonts/fonts_index.scss';
 @import 'logos/logos_index.scss';
+@import 'user_forms/user_forms_index.scss';
