--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
- *= require main
+ *= require_tree ./base
+ *= require_tree ./fonts
+ *= require_tree ./logos
+ *= require_tree ./user_forms
  */
