--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree ./base
- *= require_tree ./fonts
- *= require_tree ./logos
- *= require_tree ./user_forms
+ *= require ./reset
+ *= require ./base
+ *= require ./layout
+ *= require_tree ./modules
  */
