--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -4,10 +4,5 @@ html {
 
 body {
   font-family: 'Open Sans', sans-serif;
-}
-
-.cf::after {
-  display: block;
-  content: "";
-  clear: both;
+  background: blue;
 }
