Refactor css into globals

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,8 +1,9 @@
+@import './globals/_all.scss';
+
 html {
   font-size: 10px;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  background: blue;
+  font-family: $open-sans;
 }
