--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,5 +1,17 @@
-.cf::after {
+.l-cf::after {
   display: block;
   content: "";
   clear: both;
+}
+
+.l-middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.l-form_container {
+  padding: 3rem;
+  max-width: 64rem;
 }
