--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require_self
  *= require ./reset
+ *= require ./form_reset
  *= require ./base
  *= require ./layout
  *= require_tree ./modules
