More form styling

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -1,9 +1,10 @@
-$slack-heading-color: #2C2D30;
-$slack-logo-color: #2D333A;
-$slack-copy-color: #555459;
-$slack-tip-color: #717274;
-$slack-border-color: #717274;
-$slack-hover-light: #E8E8E8;
+$slack_heading_color: #2C2D30;
+$slack_logo_color: #2D333A;
+$slack_copy_color: #555459;
+$slack_label_color: #555459;
+$slack_tip_color: #717274;
+$slack_border_color: #717274;
+$slack_hover_light: #E8E8E8;
 
-$slack-green-dark: #1F855C;
-$slack-green: #2ab27b;
+$slack_green_dark: #1F855C;
+$slack_green: #2ab27b;
