--- a/app/assets/stylesheets/modules/logos/logos.css.scss
+++ b/app/assets/stylesheets/modules/logos/logos.css.scss
@@ -3,7 +3,7 @@
 .logo_name {
   display: inline-block;
   text-decoration: none;
-  color: $slack-logo-color;
+  color: $slack_logo-color;
   font-family: $lato;
   width: 16rem;
   height: 3rem;
