--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,3 +1,5 @@
+@import './globals/_all.scss';
+
 .l-cf::after {
   display: block;
   content: "";
@@ -13,5 +15,7 @@
 
 .l-form_container {
   padding: 3rem;
-  max-width: 64rem;
+  max-width: 70rem;
+  width: 100vw;
+  box-sizing: border-box;
 }
