--- a/app/assets/stylesheets/modules/forms/form.css.scss
+++ b/app/assets/stylesheets/modules/forms/form.css.scss
@@ -5,18 +5,23 @@
   font-size: 3.4rem;
   font-weight: 900;
   color: $slack_heading_color;
-  margin: 0 0 1.6rem 0;
+  margin: 0 0 1.8rem 0;
 }
 
 .form_field {
   width: 100%;
   margin: 0 0 1.6rem 0;
+
+  &:last-of-type {
+    margin-bottom: 3.0rem;
+  }
 }
 
 .form_field__label {
   display: block;
   color: $slack_label_color;
   font-size: 1.6rem;
+  line-height: 2.4rem;
   margin: 0 0 .4rem 0;
   cursor: pointer;
 }
@@ -57,9 +62,13 @@
   &:active {
     box-shadow: inset 0 .2rem .3rem $slack-border-color;
     padding-bottom: 1.6rem;
+    margin-bottom: 0rem;
   }
 }
 
 .form_field__submit--wide {
+  display: block;
   width: 100%;
+  margin: 1.2rem 0 0 auto;
+
 }
