Style logo_name in main nav

--- a/app/assets/stylesheets/modules/forms/user_form.css.scss
+++ b/app/assets/stylesheets/modules/forms/user_form.css.scss
@@ -8,7 +8,7 @@
 
 .l-form_container--userform {
   border: 1px solid $slack_border_light;
-  box-shadow: 0 1px 0 $slack-shadow-color;
+  box-shadow: 0 1px 0 $slack_shadow_solid_color;
   border-radius: .4rem;
   background-color: white;
 }
