--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -7,7 +7,7 @@ $slack_border_color: #717274;
 $slack_hover_light: #E8E8E8;
 $slack_border_light: #E8E8E8;
 $slack_bg_light: #F9F9F9;
-$slack-shadow-color: rgba(0,0,0,.25);
+$slack_shadow_solid_color: rgba(0,0,0,.25);
 
 $slack_green_dark: #1F855C;
 $slack_green: #2ab27b;
