Complete login view styling

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -1,9 +1,9 @@
 $slack_heading_color: #2C2D30;
 $slack_logo_color: #2D333A;
-$slack_greybutton_dark: #404B55;
+$slack_wirebutton_dark: #404B55;
 $slack_copy_color: #555459;
 $slack_label_color: #555459;
-$slack_greybutton_light: #666F77;
+$slack_wirebutton_light: #666F77;
 $slack_tip_color: #717274;
 $slack_border_color: #717274;
 $slack_hover_light: #E8E8E8;
