--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -9,11 +9,12 @@
 .l-form_container {
   padding: 3rem;
   max-width: 70rem;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
 }
 
 .l-middle {
+  display: inline-block;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -28,6 +29,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 76rem;
   max-width: 100%;
 
   & > .l-middle {
@@ -38,7 +40,8 @@
   }
 
   & > .l-form_container {
-    width: 100%;
+    max-width: 100%;
+    width: 70rem;
   }
 }
 
