--- a/app/assets/stylesheets/modules/forms/form.css.scss
+++ b/app/assets/stylesheets/modules/forms/form.css.scss
@@ -4,7 +4,7 @@
   font-family: $lato;
   font-size: 3.4rem;
   font-weight: 900;
-  color: $slack_heading_color;
+  color: $slack_label_color;
   margin: 0 0 1.8rem 0;
 }
 
