--- a/app/assets/stylesheets/modules/forms/form.css.scss
+++ b/app/assets/stylesheets/modules/forms/form.css.scss
@@ -43,7 +43,7 @@
 
 .form_field__input_tip {
   display: block;
-  margin: 0.4rem 0 0 0;
+  padding: 0.4rem 0 0 0;
   line-height: 1.6rem;
   font-size: 1.2rem;
   color: $slack_tip_color;
