Fix logout bug where user is null

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -15,3 +15,7 @@ $slack_green_dark: #1F855C;
 $slack_green: #2ab27b;
 
 $form_error_red: #E8463B;
+
+$slack_sidenav_main: #4D394B;
+$slack_sidenav_hover: #3E313C;
+$slack_sidenav_active: #4C9689
