Create Sidenav component

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -18,4 +18,4 @@ $form_error_red: #E8463B;
 
 $slack_sidenav_main: #4D394B;
 $slack_sidenav_hover: #3E313C;
-$slack_sidenav_active: #4C9689
+$slack_sidenav_active: #4C9689;
