Add font-awesome icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <script src="https://use.fontawesome.com/3c0efe9141.js"></script>
     <%= javascript_include_tag 'application' %>
+
     <% if logged_in? %>
       <script type="text/javascript">
         window.currentUser =
