Create chat view

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -19,3 +19,5 @@ $form_error_red: #E8463B;
 $slack_sidenav_main: #4D394B;
 $slack_sidenav_hover: #3E313C;
 $slack_sidenav_active: #4C9689;
+
+$slack_fa_grey: #B7AFB6;
