Set font-awesome icon size

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -20,4 +20,5 @@ $slack_sidenav_main: #4D394B;
 $slack_sidenav_hover: #3E313C;
 $slack_sidenav_active: #4C9689;
 
-$slack_fa_grey: #B7AFB6;
+$slack_sidenav_darkgrey: #B7AFB6;
+$slack_sidenav_ligthgrey: #C9C3C8;
