--- a/app/assets/stylesheets/modules/font_awesome/icons.css.scss
+++ b/app/assets/stylesheets/modules/font_awesome/icons.css.scss
@@ -1,9 +1,13 @@
 @import '../../globals/_all.scss';
 
 .fa-grey {
-  color: $slack_fa_grey;
+  color: $slack_sidenav_ligthgrey;
 }
 
 .fa-white {
   color: white;
+}
+
+.fa {
+  vertical-align: middle;
 }
