Write styles for status indicator

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -20,5 +20,7 @@ $slack_sidenav_main: #4D394B;
 $slack_sidenav_hover: #3E313C;
 $slack_sidenav_active: #4C9689;
 
-$slack_sidenav_darkgrey: #B7AFB6;
-$slack_sidenav_ligthgrey: #C9C3C8;
+$slack_sidenav_darkgrey: #AB9BA9;
+$slack_sidenav_lightgrey: #CAC4C9;
+
+$slack_status_active: #38978D;
