--- a/app/assets/stylesheets/modules/font_awesome/icons.css.scss
+++ b/app/assets/stylesheets/modules/font_awesome/icons.css.scss
@@ -1,7 +1,7 @@
 @import '../../globals/_all.scss';
 
 .fa-grey {
-  color: $slack_sidenav_ligthgrey;
+  color: $slack_sidenav_darkgrey;
 }
 
 .fa-white {
