--- a/app/assets/stylesheets/modules/chat/chat_sidenav.css.scss
+++ b/app/assets/stylesheets/modules/chat/chat_sidenav.css.scss
@@ -7,14 +7,24 @@
   left: 0rem;
   width: 22rem;
   background-color: $slack_sidenav_main;
+  font-family: $lato;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
+  & * {
+    overflow: inherit;
+    text-overflow: ellipsis;
+  }
 }
 
 .left_icon {
-  display: inline;
+  display: inline-block;
   box-sizing: border-box;
   line-height: 2.1rem;
-  width: 2rem;
+  width: 1.5rem;
   margin: 0 .1rem 0 0;
+  vertical-align: bottom;
 }
 
 .status_indicator {
