--- a/app/assets/stylesheets/modules/chat/chat_sidenav_header.css.scss
+++ b/app/assets/stylesheets/modules/chat/chat_sidenav_header.css.scss
@@ -3,8 +3,9 @@
 .chat_sidenav_header {
   box-sizing: border-box;
   width: 100%;
+  height: 6.5rem;
   background-color: $slack_sidenav_main;
-  padding: 0.9rem 1.6rem;
+  padding: 1rem 1.6rem;
   cursor: pointer;
 
   &:hover {
@@ -17,6 +18,10 @@
 }
 
 .chat_sidenav_header__heading {
+  margin: .2rem 0;
+}
+
+.chat_sidenav_header__teamname {
   display: inline;
   color: white;
   font-size: 1.8rem;
@@ -28,9 +33,10 @@
 }
 
 .chat_sidenav_header__username {
+  display: inline-block;
+  width: calc(100% - 1.6rem);
   color: $slack_sidenav_darkgrey;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   line-height: 2.1rem;
   font-weight: lighter;
-
 }
