--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -11,6 +11,7 @@ $slack_border_light: #E8E8E8;
 $slack_bg_light: #F9F9F9;
 $slack_shadow_solid_color: rgba(0,0,0,.25);
 
+
 $slack_green_dark: #1F855C;
 $slack_green: #2ab27b;
 
@@ -24,3 +25,5 @@ $slack_sidenav_darkgrey: #AB9BA9;
 $slack_sidenav_lightgrey: #CAC4C9;
 
 $slack_status_active: #38978D;
+
+$slack_modal_border: #D9D9D9;
