Make modal shrink to smaller content

--- a/app/assets/stylesheets/modules/modals/modal.css.scss
+++ b/app/assets/stylesheets/modules/modals/modal.css.scss
@@ -1,11 +1,8 @@
 .modal_content {
-  position: absolute;
+  position: relative;
   box-sizing: border-box;
-  padding: 0.4rem;
-  top: 0rem;
-  right: 0rem;
-  bottom: 0rem;
-  left: 0rem;
+  max-height: calc(100vh - 10.7rem);
+  padding: 1rem;
 }
 
 
