Create sidenav header modal

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -16,3 +16,12 @@ input {
 em {
   font-style: italic;
 }
+
+strong {
+  font-weight: 900;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
