--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -27,3 +27,4 @@ $slack_sidenav_lightgrey: #CAC4C9;
 $slack_status_active: #38978D;
 
 $slack_modal_border: #D9D9D9;
+$slack_modal_item_hover: #2D9EE0;
