Refactor overflow_ellipses css

--- a/app/assets/stylesheets/globals/_mixins.scss
+++ b/app/assets/stylesheets/globals/_mixins.scss
@@ -42,6 +42,12 @@
   }
 }
 
-@mixin ellipses {
+@mixin overflow_ellipses {
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
+  & * {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+  }
 }
