Refactor errors list

--- a/app/assets/stylesheets/modules/forms/form.css.scss
+++ b/app/assets/stylesheets/modules/forms/form.css.scss
@@ -79,3 +79,20 @@
   width: 100%;
   margin: 1.2rem 0 0 auto;
 }
+
+.form_field__text_input--warn {
+  border-color: $form_error_red;
+
+  &:hover {
+    border-color: $form_error_red;
+  }
+}
+
+.form_field__input_tip--warn {
+  color: $form_error_red;
+  font-style: italic;
+
+  & > em {
+    font-style: normal;
+  }
+}
