--- a/app/assets/stylesheets/modules/forms/chatgroup_form.css.scss
+++ b/app/assets/stylesheets/modules/forms/chatgroup_form.css.scss
@@ -20,8 +20,9 @@
   box-sizing: border-box;
   cursor: pointer;
   text-align: center;
+  outline: none;
 
-  &:hover {
+  &:hover, &:focus {
     background-color: $slack_hover_light;
   }
 
