Fix bug (or find workaround) user jbuilder partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 
     <% if logged_in? %>
       <script type="text/javascript">
+
         window.currentUser =
-        <%= render('api/shared/full_user_info.json.jbuilder', user: current_user).html_safe %>
+        <%= render('api/shared/current_user.json.jbuilder', user: current_user).html_safe %>
       </script>
     <% end %>
   </head>
