--- a/app/assets/stylesheets/globals/_mixins.scss
+++ b/app/assets/stylesheets/globals/_mixins.scss
@@ -24,7 +24,7 @@
   overflow-y: auto;
 
   &::-webkit-scrollbar {
-    width: 0.8rem;
+    width: 1.6rem;
   }
 
   &::-webkit-scrollbar-track {
@@ -34,13 +34,10 @@
 
   &::-webkit-scrollbar-thumb {
     background-color: transparent;
-  }
-
-  &:hover {
-    &::-webkit-scrollbar-thumb {
-      border-radius: 0.4rem;
-      background-color: rgba(255,255,255,0.2);
-    }
+    border-radius: 0.8rem;
+    border: 0.4rem solid transparent;
+    -webkit-box-shadow: inset 0 0 0 0.4rem transparent,
+      inset 0 0 0 0.8rem rgba(255,255,255,0.4);
   }
 }
 
