--- a/app/assets/stylesheets/modules/chat/sidenav/chat_sidenav_channel_index.css.scss
+++ b/app/assets/stylesheets/modules/chat/sidenav/chat_sidenav_channel_index.css.scss
@@ -5,7 +5,8 @@
   box-sizing: border-box;
   width: 100%;
   height: calc(100% - 6.5rem);
-  padding: 1rem 1.6rem;
+  padding: 1rem 0;
+
 }
 
 .chat_sidenav_channel_index_section {
