Style select input

--- a/app/assets/stylesheets/modules/forms/form.css.scss
+++ b/app/assets/stylesheets/modules/forms/form.css.scss
@@ -25,7 +25,8 @@
   margin: 0 0 .4rem 0;
   cursor: pointer;
 }
-.form_field__text_input {
+
+.form_field__text_input, {
   display: block;
   border: 1px solid $slack-border-color;
   width: 100%;
