--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,12 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require normalize-rails
  *= require_self
+ *= require normalize-rails
  *= require ./reset
  *= require ./form_reset
  *= require ./base
+ *= require react-select/dist/react-select
  *= require ./layout
- *= require ./react-select
  *= require_tree ./modules
  */
