Add appropriate placeholders to react-select

--- a/app/assets/stylesheets/modules/forms/react-select.css.scss
+++ b/app/assets/stylesheets/modules/forms/react-select.css.scss
@@ -42,3 +42,9 @@
 .users_search__option {
   background: red;
 }
+
+.VirtualizedSelectFocusedOption {
+  margin: 0.3rem;
+  border-radius: .3rem;
+  border: 0.1rem solid blue;
+}
