WIP style alert modal

--- a/app/assets/stylesheets/modules/modals/modal.css.scss
+++ b/app/assets/stylesheets/modules/modals/modal.css.scss
@@ -9,6 +9,13 @@
   @include overflow_ellipses;
 }
 
+.modal_content--alert {
+  box-sizing: border-box;
+  font-family: $lato;
+  padding: 1.5rem;
+  font-size: 1.4rem;
+}
+
 
 .modal_content--scroll {
   @include scrollable_light_bg;
