Add styles to message form

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -6,6 +6,7 @@ $slack_label_color: #555459;
 $slack_wirebutton_light: #666F77;
 $slack_tip_color: #717274;
 $slack_border_color: #717274;
+$slack_border_thick: #BCBCBE;
 $slack_border_medium: #C7CACD;
 $slack_hover_light: #E8E8E8;
 $slack_border_light: #E8E8E8;
@@ -31,3 +32,6 @@ $slack_modal_border: #D9D9D9;
 $slack_modal_item_hover: #2D9EE0;
 
 $slack_cancel_color: #0576B9;
+
+$slack_green_button: #56B68B;
+$slack_green_button_border: #2ea664;
