--- a/app/assets/stylesheets/modules/chat/messages/messages_form.css.scss
+++ b/app/assets/stylesheets/modules/chat/messages/messages_form.css.scss
@@ -17,7 +17,7 @@
   height: 4.4rem;
 
   &--focus {
-    border: 0.2rem solid $slack_border_color;
+    box-shadow: inset 0 0 0 0.2rem $slack_border_color;
 
     & .message_form__submit {
       border: 0.2rem solid $slack_border_color;
@@ -76,4 +76,29 @@
 .message_form__input_container {
   display: block;
   float: left;
+  height: 100%;
+  width: calc(100% - 4.4rem);
+}
+
+.message_form__input {
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.9rem;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  font-family: $open_sans;
+
+  &::-webkit-input-placeholder {
+    color: $slack_tip_color;
+  }
+  &::-moz-placeholder {
+    color: $slack_tip_color;
+  }
+  &:-ms-input-placeholder {
+    color: $slack_tip_color;
+  }
+  &:-moz-placeholder {
+    color: $slack_tip_color;
+  }
 }
