--- a/app/assets/stylesheets/modules/fonts/fonts.css.scss
+++ b/app/assets/stylesheets/modules/fonts/fonts.css.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,900|Open+Sans');
