--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -72,19 +72,15 @@
   border: .4rem solid;
 }
 
-.l-wire_button--white {
-  color: white;
-  border-color: white;
+.l-wire_button--green {
+  color: $slack_green;
+  border-color: $slack_green;
   box-shadow: 0 0 2px 2px $slack_shadow_solid_color,
     inset 0 0 2px 2px $slack_shadow_solid_color;
-  text-shadow:
-   -1px -1px 2px $slack_shadow_solid_color,
-    1px -1px 2px $slack_shadow_solid_color,
-    -1px 1px 2px $slack_shadow_solid_color,
-     1px 1px 2px $slack_shadow_solid_color;
+  @include text-shadow;
 
   &:hover {
-    color: $slack_green;
-    border-color: $slack_green;
+    color: white;
+    border-color: white;
   }
 }
