--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
         <%= render('/api/users/user_full_info.json.jbuilder', user: current_user).html_safe %>
       </script>
     <% end %>
+    <script type="text/javascript">
+      window.cloudinaryOptions = {
+        cloudName: '<%= ENV['CLOUDINARY_NAME'] %>',
+        uploadPreset: '<%= ENV['CLOUDINARY_UPLOAD_PRESET'] %>'
+      }
+    </script>
+    <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   </head>
 
   <body>
