Add scrollable message list

--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -1,4 +1,5 @@
 $slack_heading_color: #2C2D30;
+$slack_message_color: #2C2D30;
 $slack_logo_color: #2D333A;
 $slack_wirebutton_dark: #404B55;
 $slack_copy_color: #555459;
