--- a/app/assets/stylesheets/modules/chat/messages/messages_form.css.scss
+++ b/app/assets/stylesheets/modules/chat/messages/messages_form.css.scss
@@ -1,6 +1,7 @@
 @import '../../../globals/_all.scss';
 
 .messages_view__footer {
+  display: block;
   position: absolute;
   left: 0rem;
   right: 0rem;
