--- a/app/assets/stylesheets/modules/chat/messages/messages_index.css.scss
+++ b/app/assets/stylesheets/modules/chat/messages/messages_index.css.scss
@@ -1,5 +1,16 @@
 @import '../../../globals/_all.scss';
 
-.messages_view__index {
-  
+.messages_view__index_container {
+  @include scrollable_light_bg;
+  display: block;
+  height: 100%;
+}
+
+.message {
+
+}
+
+.message__body {
+  font-size: 1.5rem;
+  color: $slack_message_color;
 }
