--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,17 @@
     <title>plaidchat | chat for teams</title>
     <%= csrf_meta_tags %>
 
+    <meta property="og:title" content="plaidchat | chat for teams">
+    <meta property="og:description" content="Live, global, online team chat for anyone">
+    <meta property="og:image" content="http://res.cloudinary.com/dvcr1kq1u/image/upload/v1509517710/plaidchat_feature_f1ataq.png">
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1202">
+    <meta property="og:image:height" content="633">
+    <meta property="og:url" content="https://plaidchat.com/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="plaidchat">
+    <meta name="twitter:image:alt" content="A screenshot of the plaidchat homepage">
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <script src="https://use.fontawesome.com/3c0efe9141.js"></script>
     <%= javascript_include_tag 'application' %>
