--- a/app/assets/stylesheets/modules/buttons/wire_button.css.scss
+++ b/app/assets/stylesheets/modules/buttons/wire_button.css.scss
@@ -17,11 +17,9 @@
   }
 }
 
-.wire_button--thick {
-  font-weight: 900;
-  border: .4rem solid;
-}
-
 .wire_button--sm {
-  padding: 0.8rem 1.2rem 0.8rem 1.2rem;
+  padding: 0.7rem 1.2rem 0.7rem 1.2rem;
+  font-weight: 300;
+  border: .15rem solid;
+  vertical-align: initial;
 }
