--- a/app/assets/stylesheets/modules/buttons/wire_button.css.scss
+++ b/app/assets/stylesheets/modules/buttons/wire_button.css.scss
@@ -15,11 +15,11 @@
     color: $slack_wirebutton_dark;
     border-color: $slack_wirebutton_dark;
   }
-}
 
-.wire_button--sm {
-  padding: 0.7rem 1.2rem 0.7rem 1.2rem;
-  font-weight: 300;
-  border: .15rem solid;
-  vertical-align: initial;
+  &--sm {
+    padding: 0.7rem 1.2rem 0.7rem 1.2rem;
+    font-weight: 300;
+    border: .15rem solid;
+    vertical-align: initial;
+  }
 }
