--- a/app/assets/stylesheets/modules/buttons/wire_button.css.scss
+++ b/app/assets/stylesheets/modules/buttons/wire_button.css.scss
@@ -17,9 +17,9 @@
   }
 
   &--sm {
+    margin-top: -0.1rem;
     padding: 0.7rem 1.2rem 0.7rem 1.2rem;
     font-weight: 300;
     border: .15rem solid;
-    vertical-align: initial;
   }
 }
