--- a/app/assets/stylesheets/modules/chat/messages/messages_index.css.scss.erb
+++ b/app/assets/stylesheets/modules/chat/messages/messages_index.css.scss.erb
@@ -1,16 +1,16 @@
 @import '../../../globals/_all.scss';
 
 .messages_view__index_container {
+  @include scrollable_light_bg;
   display: flex;
   flex-direction: column;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .messages_view__index {
-  @include scrollable_light_bg;
   max-height: 100%;
   margin-top: auto;
-  padding: 0 0 1.7rem 0;
 }
 
 .message {
@@ -24,12 +24,16 @@
       visibility: visible;
     }
   }
+  &:last-child {
+    padding-bottom: 1.7rem;
+  }
 }
 
 .message_gutter {
   position: relative;
   width: 3.8rem;
   margin-right: 1rem;
+  padding: 0.2rem 0 0 0;
 }
 
 .message_content {
@@ -65,4 +69,19 @@
   font-size: 1.5rem;
   line-height: 1.8rem;
   color: $slack_message_color;
+}
+
+.magic_link_notice {
+  position: relative;
+  min-height: 15rem;
+  background-color: $slack_bg_light;
+  margin-bottom: 1.5rem;
+}
+
+.magic_link_notice__zigzag {
+  height: 6px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background: url(<%= asset_path('zigzag.png') %>) repeat;
 }
